src/objects/Visit_Report_Team_Member__c.object
<CustomObject>
    <description>Junction object to store the Visit Report Team Member details as per R5 Req#2174</description>
    <fields>
        <fullName>CBR_ID__c</fullName>
        <formula>IF( Visit_Report__r.Channel_Review__c != NULL,  CASESAFEID(Visit_Report__r.Channel_Review__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <description>R5 - Visit Report Team Member Access Level</description>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Team Role of the Visit Report Team Member</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Report Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Report Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_Report_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <description>R5 - Visit Report Record</description>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Visit Report Team Members</relationshipLabel>
        <relationshipName>Visit_Report_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Report Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Team_Role__c</columns>
        <columns>Visit_Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VRTM-{00000}</displayFormat>
        <label>Visit Report Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Report Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>